# GammaRay

./: CMakeLists.txt  ReadMe.txt  appveyor.yml  config-gammaray.h.cmake
client/: processtracker_linux.cpp  remotemodel.h
cmake/: ECMQt5ToQt6Porting.cmake  GammaRayProbeABI.cmake  QtInstallPaths.cmake
common/: commonutils.h  message.h  metatypedeclarations.h  methodargument.cpp  streamoperators.cpp
core/: CMakeLists.txt  metaobject.h  metaobjectregistry.cpp  metaobjectrepository.h  objectwrapper.h  remoteviewserver.cpp
core/remote/: bluetoothserverdevice.cpp  bluetoothserverdevice.h  changesignalbypassproxy.cpp  changesignalbypassproxy.h  remotemodelserver.h  serverdevice.cpp  serverproxymodel.h
launcher/core/: launchoptions.cpp  pefile.cpp  probeabi.cpp  probeabi.h  probeabidetector_elf.cpp  probeabidetector_mac.cpp  probeabidetector_win.cpp
launcher/ui/: connectpage.cpp  promolabel.cpp
plugins/: CMakeLists.txt
plugins/accessibility/: CMakeLists.txt  accessibility.cpp  accessibility.h  accessibilitymodel.cpp  accessibilitymodel.h  accessibilitywidget.cpp  accessibilitywidget.h  accessibilitywidget.ui  gammaray_accessibility.json
plugins/actioninspector/: actioninspectorwidget.cpp  actionvalidator.cpp
plugins/bluetooth/: bluetooth.cpp
plugins/eventmonitor/: CMakeLists.txt
probe/: CMakeLists.txt
tests/: CMakeLists.txt  methodmodeltest.cpp  objectwrappertest.cpp  probeabitest.cpp
translations/: CMakeLists.txt
ui/: CMakeLists.txt  deferredtreeview.cpp  remoteviewwidget.cpp  searchlinecontroller.cpp  trailingcolorlabel.cpp  uiresources.cpp
(+43 files in other folders)
